fix: fix overflow issue on small screens

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -322,6 +322,7 @@ body{
     } 
     #my-work{
         padding:0;
+        overflow:hidden;
     }
 
 }
